--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
+    "mapbox-gl": "^0.38.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
