--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@angular/tsc-wrapped": "^4.3.0",
     "@ionic-native/core": "3.1.0",
     "@ionic-native/splash-screen": "3.1.0",
     "@ionic-native/status-bar": "3.1.0",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
+    "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "mapbox-gl": "^0.38.0",
     "typescript": "2.0.9"
   },
