--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
     "ionic-angular": "2.3.0",
     "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
+    "jquery": "^3.2.1",
+    "lg-autoplay": "^1.0.4",
+    "lg-fullscreen": "^1.0.1",
+    "lg-hash": "^1.0.2",
+    "lg-pager": "^1.0.2",
+    "lg-share": "^1.0.2",
+    "lg-thumbnail": "^1.0.3",
+    "lg-video": "^1.0.2",
+    "lg-zoom": "^1.0.4",
+    "lightgallery": "^1.5.0",
     "ng2-translate": "^5.0.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
@@ -54,5 +64,8 @@
       "locator": "ios"
     }
   ],
+  "config": {
+    "ionic_copy": "src/config/copy.config.js"
+  },
   "description": "Pacwest: A tour app for Pacwest in Portland, Oregon"
 }
