--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "ionic": "3.7.0",
     "mapbox-gl": "^0.38.0",
     "typescript": "2.0.9"
   },
