--- a/package.json
+++ b/package.json
@@ -1,72 +1,97 @@
 {
-  "name": "pacwest-tour-app",
-  "author": "Gustavo Youngberg",
-  "homepage": "http://www.cushwake.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@angular/tsc-wrapped": "^4.3.0",
-    "@ionic-native/core": "3.1.0",
-    "@ionic-native/splash-screen": "3.1.0",
-    "@ionic-native/status-bar": "3.1.0",
-    "@ionic/storage": "2.0.0",
-    "ionic-angular": "2.3.0",
-    "ionic-native": "^2.9.0",
-    "ionicons": "3.0.0",
-    "jquery": "^3.2.1",
-    "lg-autoplay": "^1.0.4",
-    "lg-fullscreen": "^1.0.1",
-    "lg-hash": "^1.0.2",
-    "lg-pager": "^1.0.2",
-    "lg-share": "^1.0.2",
-    "lg-thumbnail": "^1.0.3",
-    "lg-video": "^1.0.2",
-    "lg-zoom": "^1.0.4",
-    "lightgallery": "^1.5.0",
-    "ng2-translate": "^5.0.0",
-    "rxjs": "5.0.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
-    "@ionic/cli-plugin-ionic-angular": "1.4.1",
-    "ionic": "3.7.0",
-    "mapbox-gl": "^0.38.0",
-    "typescript": "2.0.9"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-console",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "pacwest-tour-app",
+    "author": "Gustavo Youngberg",
+    "homepage": "http://www.cushwake.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "2.4.8",
+        "@angular/compiler": "2.4.8",
+        "@angular/compiler-cli": "2.4.8",
+        "@angular/core": "2.4.8",
+        "@angular/forms": "2.4.8",
+        "@angular/http": "2.4.8",
+        "@angular/platform-browser": "2.4.8",
+        "@angular/platform-browser-dynamic": "2.4.8",
+        "@angular/platform-server": "2.4.8",
+        "@angular/tsc-wrapped": "^4.3.0",
+        "@ionic-native/core": "3.1.0",
+        "@ionic-native/splash-screen": "3.1.0",
+        "@ionic-native/status-bar": "3.1.0",
+        "@ionic/storage": "2.0.0",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.1",
+        "cordova-plugin-whitelist": "^1.3.1",
+        "ionic-angular": "2.3.0",
+        "ionic-native": "^2.9.0",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "3.0.0",
+        "jquery": "^3.2.1",
+        "lg-autoplay": "^1.0.4",
+        "lg-fullscreen": "^1.0.1",
+        "lg-hash": "^1.0.2",
+        "lg-pager": "^1.0.2",
+        "lg-share": "^1.0.2",
+        "lg-thumbnail": "^1.0.3",
+        "lg-video": "^1.0.2",
+        "lg-zoom": "^1.0.4",
+        "lightgallery": "^1.5.0",
+        "ng2-translate": "^5.0.0",
+        "rxjs": "5.0.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "0.7.2"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.1.4",
+        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "ionic": "3.7.0",
+        "mapbox-gl": "^0.38.0",
+        "typescript": "2.0.9"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-console",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "config": {
+        "ionic_copy": "src/config/copy.config.js"
+    },
+    "description": "Pacwest: A tour app for Pacwest in Portland, Oregon",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "ios"
+        ]
     }
-  ],
-  "config": {
-    "ionic_copy": "src/config/copy.config.js"
-  },
-  "description": "Pacwest: A tour app for Pacwest in Portland, Oregon"
 }
