--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "@ionic-native/splash-screen": "3.1.0",
         "@ionic-native/status-bar": "3.1.0",
         "@ionic/storage": "2.0.0",
-        "cordova-ios": "^4.4.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
@@ -90,8 +89,6 @@
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {}
         },
-        "platforms": [
-            "ios"
-        ]
+        "platforms": []
     }
 }
