--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
         "@angular/platform-server": "2.4.8",
         "@angular/tsc-wrapped": "^4.3.0",
         "@ionic-native/core": "3.1.0",
+        "@ionic-native/google-analytics": "^4.2.1",
         "@ionic-native/splash-screen": "3.1.0",
         "@ionic-native/status-bar": "3.1.0",
         "@ionic/storage": "2.0.0",
-        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
         "cordova-plugin-geolocation": "^2.4.3",
+        "cordova-plugin-google-analytics": "^1.8.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
@@ -57,7 +58,7 @@
         "@ionic/cli-plugin-cordova": "1.6.2",
         "@ionic/cli-plugin-ionic-angular": "1.4.1",
         "ionic": "3.9.2",
-        "mapbox-gl": "^0.38.0",
+        "mapbox-gl": "^0.39.1",
         "typescript": "2.0.9"
     },
     "cordovaPlugins": [
@@ -90,10 +91,10 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-google-analytics": {}
         },
         "platforms": [
-            "android",
             "ios"
         ]
     }
